@startuml
!theme toy
skinparam componentStyle uml2

title llm-sql-guard - 系統架構類別圖 (v1.0.0-beta)

' --- Layers Definition ---

package "Entry Point (Interaction)" #E1F5FE {
    class SqlGuardApp {
        +main(args: String[])
    }
    class InteractiveShell {
        -validator: SqlValidator
        -diagnosisService: AiDiagnosisService
        -executor: SqlExecutor
        -renderer: TableRenderer
        +start(): void
    }
}

package "Core Engine (Validation & Service)" #FFF9C4 {
    class SqlValidator {
        +validate(sql: String): ValidationResult
    }
    class AiDiagnosisService {
        -aiClient: AiClient
        +diagnose(sql, result): CompletableFuture
    }
    
    package "4-Tier Metadata" {
        class DatabaseMetadata
        class MetadataLoader {
            +load(): DatabaseMetadata
        }
    }
}

package "Intelligence (AI Diagnosis)" #E8F5E9 {
    interface AiClient {
        +ask(prompt): CompletableFuture
    }
    class LocalAiClient implements AiClient {
        -zhConverter: OpenCC
        +ask(prompt): CompletableFuture
    }
    note bottom: 支援 OpenAI 協定與自動簡繁轉換
}

package "Execution & Presentation" #F3E5F5 {
    interface SqlExecutor {
        +executeQuery(sql: String): DataTable
    }
    class JdbcSqlExecutor implements SqlExecutor {
        -url: String
    }
    class TableRenderer {
        +render(table, writer): void
    }
    class DataTable
}

package "Configuration System" #BBDEFB {
    class GuardConfig
    class ConfigLoader {
        +get(): GuardConfig
    }
}

' --- Relationships ---

SqlGuardApp --> InteractiveShell
InteractiveShell ..> SqlValidator
InteractiveShell ..> AiDiagnosisService
InteractiveShell ..> JdbcSqlExecutor
InteractiveShell ..> TableRenderer

AiDiagnosisService --> AiClient
AiDiagnosisService ..> MetadataLoader

@enduml
